--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phaser3-rollup-typescript",
-  "version": "1.1.0",
-  "description": "Phaser 3 TypeScript Starter",
+  "name": "santas-run",
+  "version": "1.0.0",
+  "description": "2D Game with Phaser and Typescript",
   "main": "dist/index.js",
   "scripts": {
     "dev": "vite",
@@ -10,14 +10,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/geocine/phaser3-rollup-typescript.git"
+    "url": "git+https://github.com/jdmiguel/santas-run.git"
   },
-  "author": "Aivan Monceller",
+  "author": "Jdmiguel",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/geocine/phaser3-rollup-typescript/issues"
-  },
-  "homepage": "https://github.com/geocine/phaser3-rollup-typescript#readme",
   "devDependencies": {
     "@types/node": "^17.0.31",
     "@rollup/plugin-alias": "^3.1.9",
